2008-06-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotRoundIntegersTest.cs: New. Unit tests for 
	DoNotRoundIntegersRule
	* Test.Rules.Correctness.mdp: Add tests to the MD project file.

2008-06-16  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewUselessControlFlowTest.cs: New. Unit tests for
	ReviewUselessControlFlowRule
	* Test.Rules.Correctness.mdp: Add tests to the MD project file.

2008-06-15  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewDoubleAssignmentTest.cs: Add test case where the field comes
	from differrent instances of the same type.
	* ReviewUseOfModuloOneOnIntegersTest.cs: New. Unit tests for 
	ReviewUseOfModuloOneOnIntegersRule
	* Test.Rules.Correctness.mdp: Add tests to the MD project file.

2008-06-14  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewDoubleAssignmentTest.cs: New. Unit tests for 
	ReviewDoubleAssignmentRule
	* Test.Rules.Correctness.mdp: Add tests to the MD project file.

2008-05-11  Andres G. Aragoneses <aaragoneses@novell.com> 

	* Test.Rules.Correctness.mdp: Fix references.

2008-05-10  Andres G. Aragoneses <aaragoneses@novell.com> 

	* UseValueInPropertySetterTest.cs,
	  AvoidConstructorsInStaticTypesTest.cs, DontCompareWithNaNTest.cs,
	  CallingEqualsWithNullArgTest.cs, BadRecursiveInvocationTest.cs,
	  FloatComparisonRuleTest.cs, MethodCanBeMadeStaticTest.cs: Update
	  (to fix build): somebody forgot to include the new namespace when
	  moving TestRunner.

2008-04-27  Jb Evain  <jbevain@novell.com>

	* MethodCanBeMadeStaticTest.cs: test that ensure that
	this rule doesn't apply on event callbacks.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* DontCompareWithNaNTest.cs: Fix name change.
	* FloatComparisonRuleTest.cs: Fix test not to depend on compiler.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidConstructorsInStaticTypesTest.cs
	* BadRecursiveInvocationTest.cs
	* CallingEqualsWithNullArgTest.cs
	* DontCompareWithNaNTest.cs
	* FloatComparisonRuleTest.cs