@@ -26,6 +26,7 @@
     <File name="ReviewUseOfModuloOneOnIntegersTest.cs" subtype="Code" buildaction="Compile" />
     <File name="ReviewUselessControlFlowTest.cs" subtype="Code" buildaction="Compile" />
     <File name="DoNotRoundIntegersTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="ReviewUseOfInt64BitsToDoubleTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="Gendarme.Rules.Correctness" />
